--- a/src/scss/jumbotron.scss
+++ b/src/scss/jumbotron.scss
@@ -1,5 +1,5 @@
 #jumbo {
-  background: url(../img/pirate-ship.jpg) no-repeat center;
+  background: url(../img/img-queen/queen-live-on-stage.jpg) no-repeat center;
   background-size: cover;
   color: white;
   padding-top: 12rem
