--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -7,14 +7,14 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{{ relative_path }}pirate-ships.html">Pirate ships</a>
+          <a class="nav-link" href="{{ relative_path }}queen-members.html">Members</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ relative_path }}index-example.html">Index example</a>
       </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Library books
+            Band Members
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             {% for book in library.books %}
