--- a/src/_templates/bake-members.njk
+++ b/src/_templates/bake-members.njk
@@ -2,19 +2,19 @@
 
 {% set relative_path = "../" %}
 
-{% block page_title %}{{ title }}{% endblock %}
+{% block page_title %}{{ name }}{% endblock %}
 
-{% block page_description %}{{ title }} by {{ author }}{% endblock %}
+{% block page_description %}{{ name }} by {{ instruments }}{% endblock %}
 
 {% block content %}
   <article class="container">
     <div class="row">
       <div class="col-sm-4">
-          <img src="../img/{{ slug }}.jpg" alt="" class="img-fluid mb-4">
+          <img src="../img/{{ slug }}.jpg" alt="{{ name }}" class="img-fluid mb-4">
       </div>
       <div class="col-sm-8">
-          <h1>{{ title }}</h1>
-          <p>{{ blurb | safe }}</p>
+          <h1>{{ name }}</h1>
+          <p>{{ description | safe }}</p>
       </div>
     </div>
   </article>
