--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -10,7 +10,10 @@
           <a class="nav-link" href="{{ relative_path }}queen-members.html">Members</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ relative_path }}index-example.html">Index example</a>
+          <a class="nav-link" href="{{ relative_path }}index-example.html">index-example</a>
+      </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ relative_path }}discography.html">Discography</a>
       </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
