--- a/src/index.njk
+++ b/src/index.njk
@@ -32,49 +32,68 @@
         <h3><a href="blog/john-deacon.html">John Deacon</a></h3>
       </div>
         
-         </div>
   <h2>Discography</h2>
   <p>List of studio albums for Queen.</p>
   <hr>
 
-    <h3><a href="https://www.bookpeople.com/" target="_blank">BookPeople</a></h3>
-    <p>603 N Lamar Blvd, Austin, TX 78703</p>
+    <h3><a href="https://www.bookpeople.com/" target="_blank">Queen</a></h3>
+    <p>1973</p>
     <hr>
   
-    <h3><a href="https://www.resistenciabooks.com/" target="_blank">Resistencia Bookstore</a></h3>
-    <p>2000 Thrasher Ln, Austin, TX 78741</p>
+    <h3><a href="https://www.resistenciabooks.com/" target="_blank">Queen II</a></h3>
+    <p>1974</p>
     <hr>
   
-    <h3><a href="http://malvernbooks.com/" target="_blank">Malvern Books</a></h3>
-    <p>613 W 29th St, Austin, TX 78705</p>
+    <h3><a href="http://malvernbooks.com/" target="_blank">Sheer Heart Attack</a></h3>
+    <p>1974</p>
     <hr>
   
-    <h3><a href="https://www.monkeywrenchbooks.org/" target="_blank">Monkeywrench Books</a></h3>
-    <p>110 N Loop Blvd E, Austin, TX 78751</p>
+    <h3><a href="https://www.monkeywrenchbooks.org/" target="_blank">A Night at the Opera</a></h3>
+    <p>1975</p>
     <hr>
   
-    <h3><a href="https://www.facebook.com/bravenewbookstore/" target="_blank">Brave New Books</a></h3>
-    <p>1904 Guadalupe St # B, Austin, TX 78705</p>
+    <h3><a href="https://www.facebook.com/bravenewbookstore/" target="_blank">A Day at the Races</a></h3>
+    <p>1976</p>
     <hr>
   
-    <h3><a href="https://www.ebookwoman.com/" target="_blank">BookWoman</a></h3>
-    <p>5501 N Lamar Blvd, Austin, TX 78751</p>
+    <h3><a href="https://www.ebookwoman.com/" target="_blank">News of the World</a></h3>
+    <p>1977</p>
     <hr>
   
-    <h3><a href="https://balconesbooks.com/" target="_blank">Balcones Books</a></h3>
-    <p>5430, 3313 Hancock Dr, Austin, TX 78731</p>
+    <h3><a href="https://balconesbooks.com/" target="_blank">Jazz</a></h3>
+    <p>1978</p>
     <hr>
   
-    <h3><a href="http://library.austintexas.gov/recycled-reads" target="_blank">Recycled Reads</a></h3>
-    <p>5335 Burnet Rd, Austin, TX 78756</p>
+    <h3><a href="http://library.austintexas.gov/recycled-reads" target="_blank">The Game</a></h3>
+    <p>1980</p>
     <hr>
   
-    <h3><a href="https://southcongressbooks.com/" target="_blank">South Congress Books</a></h3>
-    <p>1608 S Congress Ave, Austin, TX 78704</p>
+    <h3><a href="https://southcongressbooks.com/" target="_blank">Flash Gordon (Original Soundtrack)</a></h3>
+    <p>1980</p>
     <hr>
   
-    <h3><a href="https://www.12thstreetbooks.com/" target="_blank">12th Street Books</a></h3>
-    <p>827 W 12th St, Austin, TX 78701</p>
+    <h3><a href="https://www.12thstreetbooks.com/" target="_blank">Hot Space</a></h3>
+    <p>1982</p>
+    <hr>
+
+    <h3><a href="https://www.12thstreetbooks.com/" target="_blank">The Works</a></h3>
+    <p>1984</p>
+    <hr>
+
+    <h3><a href="https://www.12thstreetbooks.com/" target="_blank">A Kind of Magic</a></h3>
+    <p>1986</p>
+    <hr>
+
+    <h3><a href="https://www.12thstreetbooks.com/" target="_blank">The Miracle</a></h3>
+    <p>1989</p>
+    <hr>
+
+    <h3><a href="https://www.12thstreetbooks.com/" target="_blank">Innuendo</a></h3>
+    <p>1991</p>
+    <hr>
+
+    <h3><a href="https://www.12thstreetbooks.com/" target="_blank">Made in Heaven</a></h3>
+    <p>1995</p>
     <hr>
   
 </div>
@@ -86,14 +105,6 @@
           <h3><a href="member/{{ member.image }}.html">{{ member.title }}</a></h3>
         </div>
       {% endfor %}
-    </div>
-      <h2>Bookstores loop</h2>
-       <p>This loops through data that came from a Google Sheet example.</p>
-       <hr>
-      {% for discography in queen.discography %}
-      <h3><a href="{{ store.url }}" target="_blank">{{ store.name }}</a></h3>
-       <p>{{ store.address}}, {{ store.city }}, {{ store.state }} {{ store.zip }}</p>
-       <hr>
-  {% endfor %}
   </div>
 {% endblock %}
+
