--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -15,13 +15,17 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ relative_path }}discography.html">Discography</a>
       </li>
+       </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ relative_path }}tour.html">Tour</a>
+      </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Band Members
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            {% for book in library.books %}
-            <li><a class="dropdown-item" href="{{ relative_path }}books/{{ book.slug}}.html">{{ book.title }}</a></li>
+            {% for member in queen.members %}
+            <li><a class="dropdown-item" href="{{ relative_path }}member/{{ member.slug}}.html">{{ member.name }}</a></li>
             {% endfor %}
           </ul>
         </li>
