--- a/src/_templates/bake-members.njk
+++ b/src/_templates/bake-members.njk
@@ -10,7 +10,7 @@
   <article class="container">
     <div class="row">
       <div class="col-sm-4">
-          <img src="../img/{{ slug }}.jpg" alt="{{ name }}" class="img-fluid mb-4">
+          <img src="../img/img-queen/members/{{ imagebw }}" alt="{{ name }}" class="img-fluid mb-4">
       </div>
       <div class="col-sm-8">
           <h1>{{ name }}</h1>
