--- a/src/scss/jumbotron.scss
+++ b/src/scss/jumbotron.scss
@@ -2,7 +2,8 @@
   background: url(../img/img-queen/queen-live-on-stage.jpg) no-repeat center;
   background-size: cover;
   color: white;
-  padding-top: 12rem
+  padding-top: 12rem;
+  font-family: 'Cardo', serif;
 }
 
 #jumbo {
